Fixed right whitespace

--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@ html{
     opacity: 0;
 }
 
-body{
-    position: relative;
-}
 
 html, body{
   height: 100%;
   width: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
   font-family: 'Poppins', sans-serif;
   color: #222;
 }
@@ -22,7 +22,7 @@ html, body{
 
 
 .navbar{
-  padding: .8rem;
+    padding: 0.8rem;
 }
 .navbar-nav li{
   padding-right: 20px;
